# isp-manager-api-fa

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 202606080000_initial_schema.py
app/: main.py
app/api/: dependencies.py  router.py
app/core/: config.py  datetime.py  errors.py  logging.py  rate_limit.py  responses.py  security.py
app/db/: models.py  seed.py  session.py
app/features/app/: router.py
app/features/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/customers/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/inventory/: models.py
app/features/notifications/: models.py
app/features/orders/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/features/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  test_app.py  test_auth.py  test_customers.py  test_orders.py
