[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "isp-manager-api-fa"
version = "0.1.0"
description = "FastAPI clone of isp-manager-api"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.0",
  "PyJWT>=2.10.0",
  "bcrypt>=4.2.0",
  "python-dotenv>=1.0.1",
  "sentry-sdk[fastapi]>=2.19.0",
]

[project.scripts]
isp-manager-seed = "app.db.seed:main_cli"

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
